# HomeBot

./: .gitignore  README.md  example_config.py  homebot.service  pyproject.toml
docs/source/: conf.py  config.rst  index.rst
docs/source/guides/: how-to-write-a-module.rst
homebot/: __init__.py  main.py
homebot/core/: __init__.py  binder.py  bot.py  config.py  database.py  error_handler.py  logging.py  mdlintf.py
homebot/lib/: __init__.py
homebot/lib/libadmin/: __init__.py
homebot/lib/libandroid/: __init__.py
homebot/lib/libaosp/: post.py  project.py  returncode.py
homebot/lib/libexception/: __init__.py
homebot/lib/libgofile/: __init__.py  account.py  contents.py  session.py  utils.py
homebot/lib/liblineage/: __init__.py  hudson.py  ota.py  wiki.py
homebot/lib/liblogging/: __init__.py
homebot/lib/libmdlintf/: __init__.py
homebot/lib/libnekobin/: __init__.py
homebot/lib/libtyping/: __init__.py
homebot/lib/libupload/: __init__.py
homebot/modules/: __init__.py
homebot/modules/bridgey/: __init__.py  coordinator.py  main.py  platform.py  pool.py
homebot/modules/ci/: __init__.py  artifacts.py  main.py  manager.py  parser.py  project.py  queue_manager.py
homebot/modules/core/: __init__.py  main.py
homebot/modules/info/: __init__.py  main.py
homebot/modules/lineageos/: __init__.py  main.py
homebot/modules/lineageos_updates/: __init__.py  device_data.py  main.py  observer.py  poster.py
homebot/modules/nekobin/: __init__.py  main.py
homebot/modules/politically_correct/: __init__.py  main.py  words.py
homebot/modules/sed/: __init__.py  (+1 more)
(+28 files in other folders)
