[tool.poetry]
name = "homebot"
version = "5.2.0"
description = "A Telegram bot written in Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
requests = "^2.26.0"
py-cord = "^1.7.3"
matrix-client = "^0.4.0"
python-magic = "^0.4.24"
colour = "^0.1.5"
sebaubuntu-libs = "^1.0.6"
sphinx = { version = "^5.0.1", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
